PR/49422: Ryo ONODERA: patch(1) cannot handle context diffs